Fixed h1 font size not fitting on mobile devices

--- a/sun-seeds/src/index.scss
+++ b/sun-seeds/src/index.scss
@@ -60,7 +60,7 @@ body {
 h1 {
   width: 100%;
   max-width: $max-width-section;
-  font-size: 4rem;
+  font-size: clamp(3rem, 6vw, 4rem);
   margin: 4rem 0 0 0;
   padding: 0 2rem;
   color: $clr-dark-blue;
