--- a/sun-seeds/src/media-queries.scss
+++ b/sun-seeds/src/media-queries.scss
@@ -63,7 +63,7 @@
     }
   }
   .mockup-two-columns {
-    padding: 0 1rem 1rem 1rem;
+    padding: 0 1rem 2rem 1rem;
   }
   .four-images-section {
     div {
